--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
   "environments": {
     "test": {
       "scripts": {
-        "test-setup": "python manage.py collectstatic --noinput",
+        #"test-setup": "python manage.py collectstatic --noinput",
         "test": "python manage.py test"
       }
     }
